docs: fix logo path, and remove duplicate h3

--- a/web/index.html
+++ b/web/index.html
@@ -726,7 +726,7 @@
 <body>
     <nav id="navbar">
         <a href="#home" class="logo">
-            <img src="../docs/_static/assets/images/logo-kiso.png" alt="Kiso Logo" class="logo-icon">
+            <img src="/logo-kiso.png" alt="Kiso Logo" class="logo-icon">
             <span class="logo-text">Kiso</span>
         </a>
         <ul class="nav-links">
@@ -785,7 +785,6 @@
 
     <section class="about" id="about">
         <div class="about-content">
-            <h3>Focus on Research, Not Infrastructure</h3>
             <div class="about-text">
                 <h3>Focus on Research, Not Infrastructure</h3>
                 <p>Instead of writing custom scripts to provision resources, install software, and manage execution, Kiso lets you describe your experiments declaratively using simple configuration files.</p>
